implement game icon uploading
